--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,3 +1,3 @@
 title: Podcasts
-description: Listen to podcasts
-theme: jekyll-theme-minimal
+description: Discover, subscribe, and listen to podcasts.
+theme: jekyll-theme-cayman
